# qwen3_video_understanding

./: .gitignore  README.md  pyproject.toml
docs/: design_video_vlm_experiment.md  implementation_notes.md  transcription_with_whisper.md
scripts/: prepare_video_chunks.py
tests/: test_integration.py  test_memory.py  test_vlm.py
video_vlm_experiment/: __init__.py  chunking.py  frame_extract.py  integration.py  io.py  memory.py  prompts.py  vlm.py
video_vlm_experiment/cli/: __init__.py  convert_whisper_json.py  integrate_chunk_results.py  prepare_video_chunks.py  run_vlm_chunks.py
