[project]
name = "qwen3-video-understanding"
version = "0.1.0"
description = "Initial frame-group pipeline for video VLM understanding experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
convert-whisper-json = "video_vlm_experiment.cli.convert_whisper_json:main"
prepare-video-chunks = "video_vlm_experiment.cli.prepare_video_chunks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["video_vlm_experiment"]
