[project]
name = "qwen3-video-understanding"
version = "0.1.0"
description = "Initial frame-group pipeline for video VLM understanding experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
convert-whisper-json = "video_vlm_experiment.cli.convert_whisper_json:main"
integrate-chunk-results = "video_vlm_experiment.cli.integrate_chunk_results:main"
prepare-video-chunks = "video_vlm_experiment.cli.prepare_video_chunks:main"
run-vlm-chunks = "video_vlm_experiment.cli.run_vlm_chunks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["video_vlm_experiment"]
